--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -1,11 +1,13 @@
-.fondo {
+.active {
     background-image: url(/assets/images/Playstation.gif);
-    transition: opacity 0.5s ease;
-    opacity: 1;
 }
 
 nav {
     height: 80px;
+}
+
+.navbar{
+    transition: all 0.5s ease;
 }
 
 .fondo-pres{
@@ -27,14 +29,14 @@ nav {
 }
 
 .subrayado {
-    border-bottom: 5px solid #01449B; /* Grosor y color del subrayado */
-    padding-bottom: 5px; /* Espacio entre el texto y el subrayado (ajustable) */
+    border-bottom: 5px solid #01449B; 
+    padding-bottom: 5px;
 }
 
 .barra-divisora {
-    height: 1px; /* Grosor de la barra */
-    background-color: #01449B; /* Color de la barra */
-    margin: 20px 0; /* Margen superior e inferior */
+    height: 1px; 
+    background-color: #01449B; 
+    margin: 20px 0; 
 }
 
 .centrado {
